--- a/app.json
+++ b/app.json
@@ -24,51 +24,51 @@
       },    
       "ADMIN_GRUBU": {
          "description": "Etirafları təsdiqləməy üçün bir qrup yaradın. yaratdığınız botu həmin qrupa atıb admin edib qrup idini bura yazın",
-         "value": "-717273671"
+         "value": ""
       },      
       "İTIRAF_GRUBU": {
          "description": "Təsdiqlədiyiniz etiraf paylaşılacaq kanal/qrup idini yazın",
-         "value": "-1727079853"
+         "value": ""
       },
       "LOG_GRUBU": {
          "description": "Bu qrupa botunuz giriş çıxış bilgiləri və xüsusi gizli məlumatlar göndərəcəy bu qrupda yalnız özünüz olun",
-         "value": "-6271773727"
+         "value": ""
       },
       "KANAL": {
          "description": "Etiraflar paylaşılacaq kanal/qrup linkini bura yazın @ işarəsi olmadan",
-         "value": "EtirafClub"
+         "value": ""
       },
       "BOT_ADI": {
          "description": "Botun usernamesini bura yazın @ işarəsi ilə",
-         "value": "@EtirafClubBot"
+         "value": ""
       },
-      "SAHİB": {
+      "SAHİBİ": {
          "description": "Bura öz usernamenizi yazın @ işarəsi olmadan",
-         "value": "aykhan_s"
+         "value": ""
       },      
       "SUPPORT": {
          "description": "Bura support qrupunuz/kanalınız varsa @ işarəsi olmadan yazın yoxdusa olduğu kimi buraxın",
-         "value": "RoBotlarimTg"
+         "value": ""
       },
       "START_MESAJI": {
          "description": "Bota start verilən zaman yazılan mesaj",
-         "value": "**Salam, Xoş Gəldin** __Heçkimə demədiyin etirafları mənə deyə bilərsən__ 🤭"
+         "value": "**Selam hoşgeldin** __Kimseye demediklerini bana itiraf edebilirsin__ 🤭"
       },
       "GRUB_START": {
          "description": "Bot əgər hansısa qrupa qatılıbsa start verilərsə qrupda yazdığı mesaj",
-         "value": "✅ **Mən Aktivəm !** 💌 **Etiraf yazmaq üçün şəxsidən yazın**"
+         "value": "✅ **Ben Aktifim!** 💌 **İtiraf yazmak için botun başlat bölümüne yazınız**"
       },
       "İTİRAF": {
          "description": "Etiraf edilən zaman botun verdiyi sual",
-         "value": "**Etirafını necə paylaşım ?** 🤔"
+         "value": "**İtirafını nasıl paylaşayım?** 🤔"
       }, 
       "İTİRAFYAZ": {
          "description": "Etiraf etməy istəyən istifadəçiyə yazılan mesaj",
-         "value": "**Buyur bir etiraf yaz Daha sonra mən onun açıq və ya anonim olacağını soruşacam** 😍"
+         "value": "**İtiraf edebilirsiniz. Anonim ya da Anonim olmadan gönderebilirsin** 😍"
       },
       "GÖNDERİLDİ": {
          "description": "Etiraf edəndən sonra yazılan mesaj (öz kanalınızı yazın)",
-         "value": "✅ **Etirafınız göndərildi Adminlər tərəfindən təsdiq olunduqdan sonra @EtirafClub kanalında paylaşılacaq**"
+         "value": "✅ **İtirafınız gönderildi. Adminler tarafındən onaylanduktan sonra @kanal adı yaz kanalında paylaşılacaktır.**"
       }
       
    }
