--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
          "description": "Etirafları təsdiqləməy üçün bir qrup yaradın. yaratdığınız botu həmin qrupa atıb admin edib qrup idini bura yazın",
          "value": ""
       },      
-      "İTIRAF_GRUBU": {
+      "İTİRAF_GRUBU": {
          "description": "Təsdiqlədiyiniz etiraf paylaşılacaq kanal/qrup idini yazın",
          "value": ""
       },
