--- a/app.json
+++ b/app.json
@@ -22,53 +22,53 @@
          "description": "my.telegram.org adresindən API HASH alın",
          "value": ""
       },    
-      "ADMIN_GRUBU": {
+      "ADMIN_QRUP": {
          "description": "Etirafları təsdiqləməy üçün bir qrup yaradın. yaratdığınız botu həmin qrupa atıb admin edib qrup idini bura yazın",
-         "value": ""
+         "value": "-717273671"
       },      
-      "İTİRAF_GRUBU": {
+      "ETIRAF_QRUP": {
          "description": "Təsdiqlədiyiniz etiraf paylaşılacaq kanal/qrup idini yazın",
-         "value": ""
+         "value": "-1727079853"
       },
-      "LOG_GRUBU": {
+      "LOG_QRUP": {
          "description": "Bu qrupa botunuz giriş çıxış bilgiləri və xüsusi gizli məlumatlar göndərəcəy bu qrupda yalnız özünüz olun",
-         "value": ""
+         "value": "-6271773727"
       },
-      "KANAL": {
+      "kanal": {
          "description": "Etiraflar paylaşılacaq kanal/qrup linkini bura yazın @ işarəsi olmadan",
-         "value": ""
+         "value": "EtirafClub"
       },
-      "BOT_ADI": {
+      "BOT_AD": {
          "description": "Botun usernamesini bura yazın @ işarəsi ilə",
-         "value": ""
+         "value": "@EtirafClubBot"
       },
-      "SAHİBİ": {
+      "sahib": {
          "description": "Bura öz usernamenizi yazın @ işarəsi olmadan",
-         "value": ""
+         "value": "aykhan_s"
       },      
-      "SUPPORT": {
+      "support": {
          "description": "Bura support qrupunuz/kanalınız varsa @ işarəsi olmadan yazın yoxdusa olduğu kimi buraxın",
-         "value": ""
+         "value": "RoBotlarimTg"
       },
-      "START_MESAJI": {
+      "startmesaj": {
          "description": "Bota start verilən zaman yazılan mesaj",
-         "value": "**Selam hoşgeldin** __Kimseye demediklerini bana itiraf edebilirsin__ 🤭"
+         "value": "**Salam, Xoş Gəldin** __Heçkimə demədiyin etirafları mənə deyə bilərsən__ 🤭"
       },
-      "GRUB_START": {
+      "qrupstart": {
          "description": "Bot əgər hansısa qrupa qatılıbsa start verilərsə qrupda yazdığı mesaj",
-         "value": "✅ **Ben Aktifim!** 💌 **İtiraf yazmak için botun başlat bölümüne yazınız**"
+         "value": "✅ **Mən Aktivəm !** 💌 **Etiraf yazmaq üçün şəxsidən yazın**"
       },
-      "İTİRAF": {
+      "etirafmsg": {
          "description": "Etiraf edilən zaman botun verdiyi sual",
-         "value": "**İtirafını nasıl paylaşayım?** 🤔"
+         "value": "**Etirafını necə paylaşım ?** 🤔"
       }, 
-      "İTİRAFYAZ": {
+      "etirafyaz": {
          "description": "Etiraf etməy istəyən istifadəçiyə yazılan mesaj",
-         "value": "**İtiraf edebilirsiniz. Anonim ya da Anonim olmadan gönderebilirsin** 😍"
+         "value": "**Buyur bir etiraf yaz Daha sonra mən onun açıq və ya anonim olacağını soruşacam** 😍"
       },
-      "GÖNDERİLDİ": {
+      "gonderildi": {
          "description": "Etiraf edəndən sonra yazılan mesaj (öz kanalınızı yazın)",
-         "value": "✅ **İtirafınız gönderildi. Adminler tarafındən onaylanduktan sonra @kanal adı yaz kanalında paylaşılacaktır.**"
+         "value": "✅ **Etirafınız göndərildi Adminlər tərəfindən təsdiq olunduqdan sonra @EtirafClub kanalında paylaşılacaq**"
       }
       
    }
